added new documentation witjout vtkMaf

--- a/qa/doc_output/CMakeLists.txt
+++ b/qa/doc_output/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(Doxygen)
 
 if (DOXYGEN_FOUND)
   configure_file(MAF2Doxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MAF2Doxyfile IMMEDIATE @ONLY)
+  configure_file(MAF2DoxyfileWithoutvtkMaf.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MAF2DoxyfileWithoutvtkMaf IMMEDIATE @ONLY)
   configure_file(MAF2DoxyfileWithTests.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MAF2DoxyfileWithTests IMMEDIATE @ONLY)
   configure_file(MAF2PythonDoxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MAF2PythonDoxyfile IMMEDIATE @ONLY)
   configure_file(vtkMAF2Doxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/vtkMAF2Doxyfile IMMEDIATE @ONLY)
@@ -44,6 +45,11 @@ execute_process(
 
 execute_process(
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
+  COMMAND ${CMAKE_COMMAND} -E remove_directory MAF2DoxyfileWithoutvtkMaf
+)
+
+execute_process(
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
   COMMAND ${DOXYGEN_EXECUTABLE} MAF2Doxyfile
 )
 
@@ -55,6 +61,11 @@ execute_process(
 execute_process(
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
   COMMAND ${DOXYGEN_EXECUTABLE} vtkMAF2Doxyfile
+)
+
+execute_process(
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
+  COMMAND ${DOXYGEN_EXECUTABLE} MAF2DoxyfileWithoutvtkMaf
 )
 
 else (DOXYGEN_FOUND)
