--- a/qa/mafPath.py.conf
+++ b/qa/mafPath.py.conf
@@ -18,3 +18,5 @@ vtkMafDocOutput = os.path.join(mafQADir,"doc_output","DocOutputvtkMAF","xml")
 mafDocWithTestsOutput = os.path.join(mafQADir,"doc_output","DocWithTestsOutput","xml")
 #represents the output directory of the doxygen of the Python source files, in xml
 mafPythonDocOutput = os.path.join("@PROJ_BINARY_DIR@","qa","doc_output","PythonDocOutput","xml")
+#represents the output directory of the doxygen of the C++ source files , in xml
+mafDocWithoutvtkMafOutput = os.path.join(mafQADir,"doc_output","DocOutputWithoutvtkMaf","xml")
