--- a/qa/doc_output/MAF2DoxyfileWithoutvtkMaf.in
+++ b/qa/doc_output/MAF2DoxyfileWithoutvtkMaf.in
@@ -38,7 +38,7 @@ PROJECT_NUMBER         = "v 2.2"
 # If a relative path is entered, it will be relative to the location 
 # where doxygen was started. If left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = @CMAKE_BINARY_DIR@/qa/doc_output/DocOutput
+OUTPUT_DIRECTORY       = @CMAKE_BINARY_DIR@/qa/doc_output/DocOutputWithoutvtkMaf
 
 # If the CREATE_SUBDIRS tag is set to YES, then doxygen will create 
 # 4096 sub-directories (in 2 levels) under the output directory of each output 
@@ -575,8 +575,7 @@ INPUT                  = . \
                          @CMAKE_SOURCE_DIR@/Interaction \
                          @CMAKE_SOURCE_DIR@/IO \
                          @CMAKE_SOURCE_DIR@/VME \
-                         @CMAKE_SOURCE_DIR@/Operations \
-                         @CMAKE_SOURCE_DIR@/vtkMAF
+                         @CMAKE_SOURCE_DIR@/Operations
 
 # This tag can be used to specify the character encoding of the source files 
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is 
