added new documentation witjout vtkMed

--- a/qa/doc_output/CMakeLists.txt
+++ b/qa/doc_output/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(Doxygen)
 if (DOXYGEN_FOUND)
   configure_file(MEDDoxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MEDDoxyfile IMMEDIATE @ONLY)
   configure_file(MEDDoxyfileWithTests.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MEDDoxyfileWithTests IMMEDIATE @ONLY)
+  configure_file(MEDDoxyfileWithoutvtkMed.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MEDDoxyfileWithoutvtkMed IMMEDIATE @ONLY)
   # configure_file(MAF2PythonDoxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MAF2PythonDoxyfile IMMEDIATE @ONLY)
   configure_file(vtkMEDDoxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/vtkMEDDoxyfile IMMEDIATE @ONLY)
 
@@ -39,6 +40,17 @@ execute_process(
 
 execute_process(
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
+  COMMAND ${CMAKE_COMMAND} -E remove_directory DocOutputWithoutvtkMed
+)
+
+execute_process(
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
+  COMMAND ${CMAKE_COMMAND} -E remove_directory DocOutputvtkMed
+)
+
+
+execute_process(
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
   COMMAND ${DOXYGEN_EXECUTABLE} MEDDoxyfile
 )
 
@@ -50,6 +62,11 @@ execute_process(
 execute_process(
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
   COMMAND ${DOXYGEN_EXECUTABLE} vtkMEDDoxyfile
+)
+
+execute_process(
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
+  COMMAND ${DOXYGEN_EXECUTABLE} MEDDoxyfileWithoutvtkMed
 )
 
 else (DOXYGEN_FOUND)
