--- a/qa/medPath.py.conf
+++ b/qa/medPath.py.conf
@@ -18,3 +18,5 @@ vtkMedDocOutput = os.path.join(medQADir,"doc_output","DocOutputvtkMed","xml")
 medDocWithTestsOutput = os.path.join(medQADir,"doc_output","DocWithTestsOutput","xml")
 #represents the output directory of the doxygen of the Python source files, in xml
 medPythonDocOutput = os.path.join("@MED_BINARY_DIR@","qa","doc_output","PythonDocOutput","xml")
+#represents the output directory of the doxygen of the C++ source files , in xml
+medDocWithoutvtkMedOutput = os.path.join(medQADir,"doc_output","DocOutputWithoutvtkMed","xml")
