--- a/qa/Rules/NamingConventionRulesFilePattern.ini
+++ b/qa/Rules/NamingConventionRulesFilePattern.ini
@@ -1,3 +1,3 @@
 parameter="\Aclass.*\.xml"
-sourceDir=medPath.medDocOutput
+sourceDir=medPath.medDocWithoutvtkMedOutput
 groupDesc="Check that variables or functions respect the naming convention"
