--- a/qa/Rules/FileNamingRulesFilePattern.ini
+++ b/qa/Rules/FileNamingRulesFilePattern.ini
@@ -1,3 +1,3 @@
 parameter="\Aclass.*\.xml"
-sourceDir=medPath.mafDocOutput
+sourceDir=medPath.medDocOutput
 groupDesc="Check that filename respect the naming convention"
