--- a/vtkMED/Testing/CMakeLists.txt
+++ b/vtkMED/Testing/CMakeLists.txt
@@ -170,6 +170,8 @@ ADD_TEST(CSkeletonVertexM1Test ${EXECUTABLE_OUTPUT_PATH}/CSkeletonVertexM1Test)
 ADD_EXECUTABLE(CSkeletonVertexM2Test CSkeletonVertexM2Test.h CSkeletonVertexM2Test.cpp)
 ADD_TEST(CSkeletonVertexM2Test ${EXECUTABLE_OUTPUT_PATH}/CSkeletonVertexM2Test)
 
+ADD_EXECUTABLE(vtkMEDImageFillHolesRemoveIslandsTest vtkMEDImageFillHolesRemoveIslandsTest.h vtkMEDImageFillHolesRemoveIslandsTest.cpp)
+ADD_TEST(vtkMEDImageFillHolesRemoveIslandsTest ${EXECUTABLE_OUTPUT_PATH}/vtkMEDImageFillHolesRemoveIslandsTest)
 
 # wxWidgets specific classes
 #IF (MAF_USE_WX)
