--- a/MEDUse.cmake.in
+++ b/MEDUse.cmake.in
@@ -2,11 +2,11 @@ INCLUDE(CMakeImportBuildSettings)
 
 CMAKE_IMPORT_BUILD_SETTINGS("${MED_BUILD_SETTINGS_FILE}")
 
-IF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
+IF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 10")
 #IF (MED_USE_BTK)
   INCLUDE(@BTK_USE_FILE@)
 #ENDIF (MED_USE_BTK)
-ENDIF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
+ENDIF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008" OR ${CMAKE_GENERATOR} STREQUAL "Visual Studio 10")
 
 INCLUDE_DIRECTORIES("@MED_INSTALL_INCLUDE_DIRS@" "@MED_SOURCE_DIR@/VME")
 
