added collision detection filter

--- a/vtkMED/CMakeLists.txt
+++ b/vtkMED/CMakeLists.txt
@@ -93,6 +93,10 @@ SET(vtkMED_SRCS
   
   vtkMEDImageFillHolesRemoveIslands.cxx
   vtkMEDImageFillHolesRemoveIslands.h
+
+  ######vtkbioeng################################
+  vtkMEDCollisionDetectionFilter.cxx
+  vtkMEDCollisionDetectionFilter.h
 )
 
 IF (MAF_USE_ITK)
