added new settings int cmakelists file to allow medInteraction.dll build

--- a/Views/CMakeLists.txt
+++ b/Views/CMakeLists.txt
@@ -62,7 +62,16 @@ SET(PROJECT_LIBS mafVME mafInteraction mafCore)
 
 SET(PROJECT_LIBS ${PROJECT_LIBS} vtkMED)
 
-# Create the library.
-ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+IF(MED_BUILD_MEDDLL)
+  SET(BUILD_SHARED_LIBS 1)
+  ADD_DEFINITIONS(-DMED_VIEWS_EXPORTS)
+  # Create the library.
+  ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
+  TARGET_LINK_LIBRARIES(${PROJECT_NAME} mafDLL vtkMED medCommon medVME medInteraction)
+ELSE(MED_BUILD_MEDDLL)
+  # Create the library.
+  ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
+  TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+ENDIF (MED_BUILD_MEDDLL)
 
+ADD_DEPENDENCIES(${PROJECT_NAME} medCommon medVME medInteraction)
