removed MED_EXPORT

--- a/medDefines.h.in
+++ b/medDefines.h.in
@@ -3,23 +3,23 @@
 
 #include "mafDefines.h"
 
-#if @MED_BUILD_MEDDLL@
-# define MED_SHARED
-// # define MED_EXPORTS
-#endif
+// #if @MED_BUILD_MEDDLL@
+// # define MED_SHARED
+// // # define MED_EXPORTS
+// #endif
 
 //--------------------------------------------------------------------------
 // For WIN32 dynamic linking
 //--------------------------------------------------------------------------
-#if defined(_WIN32) && defined(MED_SHARED)
-# if defined(MED_EXPORTS)
-#  define MED_EXPORT __declspec( dllexport ) 
-# else
-#  define MED_EXPORT __declspec( dllimport ) 
-# endif
-#else
-# define MED_EXPORT
-#endif
+// #if defined(_WIN32) && defined(MED_SHARED)
+// # if defined(MED_EXPORTS)
+// #  define MED_EXPORT __declspec( dllexport ) 
+// # else
+// #  define MED_EXPORT __declspec( dllimport ) 
+// # endif
+// #else
+// # define MED_EXPORT
+// #endif
 
 //--------------------------------------------------------------------------
 // Data root used to reach data for testing
