--- a/Testing/Common/CMakeLists.txt
+++ b/Testing/Common/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT (MedicalCommon_TEST)
 
 IF(MED_BUILD_MEDDLL)
-  LINK_LIBRARIES(medDLL)
+  LINK_LIBRARIES(medCommon medVME)
 ELSE(MED_BUILD_MEDDLL)
   LINK_LIBRARIES(medVME medCommon)
 ENDIF (MED_BUILD_MEDDLL)
