--- a/Testing/Gui/CMakeLists.txt
+++ b/Testing/Gui/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT (MedicalGui_TEST)
 
 IF(MED_BUILD_MEDDLL)
-  LINK_LIBRARIES(medDLL)
+  LINK_LIBRARIES(medGui)
 ELSE(MED_BUILD_MEDDLL)
   LINK_LIBRARIES(medGui mafCore)
 ENDIF (MED_BUILD_MEDDLL)
