--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT (MedicalOperations_TEST)
 
 IF(MED_BUILD_MEDDLL)
-  LINK_LIBRARIES(medDLL)
+  LINK_LIBRARIES(medOperations)
 ELSE(MED_BUILD_MEDDLL)
   LINK_LIBRARIES(medVME medCommon medOperations)
 ENDIF (MED_BUILD_MEDDLL)
