--- a/Testing/Views/CMakeLists.txt
+++ b/Testing/Views/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT (MedicalViews_TEST)
 
 IF(MED_BUILD_MEDDLL)
-  LINK_LIBRARIES(medDLL)
+  LINK_LIBRARIES(medViews)
 ELSE(MED_BUILD_MEDDLL)
   LINK_LIBRARIES(GPUAPI medVME medCommon medViews medInteraction)
 ENDIF (MED_BUILD_MEDDLL)
