--- a/vtkMED/Testing/CMakeLists.txt
+++ b/vtkMED/Testing/CMakeLists.txt
@@ -6,7 +6,7 @@ IF (CPPUNIT_FOUND)
   LINK_LIBRARIES(${CPPUNIT_LIBRARIES})
   
   IF(MED_BUILD_MEDDLL)
-    LINK_LIBRARIES(medDLL vtkMED)
+    LINK_LIBRARIES(mafDLL vtkMED)
   ELSE(MED_BUILD_MEDDLL)
     LINK_LIBRARIES(vtkMED vtkGraphics vtkRendering medCommon)
   ENDIF (MED_BUILD_MEDDLL)
