Add flood fill filter. Use flood filter inside fh/ri filter. Improve documentation.

--- a/vtkMED/CMakeLists.txt
+++ b/vtkMED/CMakeLists.txt
@@ -99,6 +99,9 @@ SET(vtkMED_SRCS
   vtkMEDVolumeSlicerNotInterpolated.cxx
   vtkMEDVolumeSlicerNotInterpolated.h
 
+  vtkMEDBinaryImageFloodFill.cxx
+  vtkMEDBinaryImageFloodFill.h
+  
   ######vtkbioeng################################
   vtkMEDCollisionDetectionFilter.cxx
   vtkMEDCollisionDetectionFilter.h
