set off as default for every test suite

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -14,17 +14,17 @@ ELSE (CPPUNIT_FOUND)
   MESSAGE("Cppunit library not found! Please fill the corresponding cache entries")
 ENDIF (CPPUNIT_FOUND)
   
-OPTION(BUILD_BASE_TESTING "Enable building of testing for BASE classes" ON)
+OPTION(BUILD_BASE_TESTING "Enable building of testing for BASE classes" OFF)
 IF (BUILD_BASE_TESTING)
   SUBDIRS(Base)
 ENDIF (BUILD_BASE_TESTING)
 
-OPTION(BUILD_CORE_TESTING "Enable building of testing for CORE classes" ON)
+OPTION(BUILD_CORE_TESTING "Enable building of testing for CORE classes" OFF)
 IF (BUILD_CORE_TESTING)
   SUBDIRS(Core)
 ENDIF (BUILD_CORE_TESTING)
 
-OPTION(BUILD_GUI_TESTING "Enable building of testing for GUI classes" ON)
+OPTION(BUILD_GUI_TESTING "Enable building of testing for GUI classes" OFF)
 IF (BUILD_GUI_TESTING)
   SUBDIRS(Gui)
 ENDIF (BUILD_GUI_TESTING)
@@ -34,22 +34,22 @@ IF (BUILD_IO_TESTING)
   SUBDIRS(IO)
 ENDIF (BUILD_IO_TESTING)
 
-OPTION(BUILD_OPERATIONS_TESTING "Enable building of testing for OPERATIONS classes" ON)
+OPTION(BUILD_OPERATIONS_TESTING "Enable building of testing for OPERATIONS classes" OFF)
 IF (BUILD_OPERATIONS_TESTING)
   SUBDIRS(Operations)
 ENDIF (BUILD_OPERATIONS_TESTING)
 
-OPTION(BUILD_INTERACTION_TESTING "Enable building of testing for Interaction classes" ON)
+OPTION(BUILD_INTERACTION_TESTING "Enable building of testing for Interaction classes" OFF)
 IF (BUILD_INTERACTION_TESTING)
   SUBDIRS(Interaction)
 ENDIF (BUILD_INTERACTION_TESTING)
 
-OPTION(BUILD_VME_TESTING "Enable building of testing for VME classes" ON)
+OPTION(BUILD_VME_TESTING "Enable building of testing for VME classes" OFF)
 IF (BUILD_VME_TESTING)
   SUBDIRS(VME)
 ENDIF (BUILD_VME_TESTING)
 
-OPTION(BUILD_DATAPIPES_TESTING "Enable building of testing for DataPipe classes" ON)
+OPTION(BUILD_DATAPIPES_TESTING "Enable building of testing for DataPipe classes" OFF)
 IF (BUILD_DATAPIPES_TESTING)
   SUBDIRS(VME/DataPipes)
 ENDIF (BUILD_DATAPIPES_TESTING)
