added stuff to build xerces dll

--- a/mafDLL/CMakeLists.txt
+++ b/mafDLL/CMakeLists.txt
@@ -6,7 +6,7 @@ PROJECT(mafDLL)
 
 DBG_MESSAGE("Configuring project mafDLL")
 
-ADD_DEFINITIONS(-DMAF_EXPORTS)
+ADD_DEFINITIONS(-DMAF_EXPORTS -UPROJ_SAX2 -UPROJ_XMLPARSER -UPROJ_XMLUTIL -UPROJ_PARSERS -UPROJ_SAX4C -UPROJ_DOM -UPROJ_VALIDATORS -UXML_SINGLEDLL -UXML_USE_WIN32_TRANSCODER -UXML_USE_WIN32_MSGLOADER -UXML_USE_NETACCESSOR_WINSOCK)
 
 LINK_LIBRARIES(glu32 opengl32 vtkHybrid vtkIO vtkRendering vtkGraphics vtkFiltering vtkImaging vtkCommon vtkftgl vtkfreetype XercesC curl Crypto vtkMAF GPUAPI)
 
