--- a/Testing/VME/CMakeLists.txt
+++ b/Testing/VME/CMakeLists.txt
@@ -193,3 +193,7 @@ ENDIF (MAF_USE_VTK)
 # classes using VTK+wxWidgets
 #IF (MAF_USE_WX AND MAF_USE_VTK)
 #ENDIF (MAF_USE_WX AND MAF_USE_VTK)
+
+IF (WIN32)
+  SET_TARGET_PROPERTIES(mafGizmoROI_BESTest PROPERTIES LINK_FLAGS "/MANIFEST")
+ENDIF (WIN32)
