added medGui as dependency

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -83,7 +83,7 @@ IF(MED_BUILD_MEDDLL)
   ADD_DEFINITIONS(-DMED_COMMON_EXPORTS)
   # Create the library.
   ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
-  TARGET_LINK_LIBRARIES(${PROJECT_NAME} mafDLL)
+  TARGET_LINK_LIBRARIES(${PROJECT_NAME} mafDLL medGui)
 ELSE(MED_BUILD_MEDDLL)
   # Create the library.
   ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
