Extract vtkMAFPolyDataNormals code to vtkMAF class to clean up code and fix mafDLL building

--- a/vtkMAF/CMakeLists.txt
+++ b/vtkMAF/CMakeLists.txt
@@ -82,8 +82,10 @@ SET(vtkMAF_SRCS
   vtkMAFTextOrientator.h
   vtkMAFProfilingActor.cxx
   vtkMAFProfilingActor.h
-	vtkMAFXYPlotActor.cxx
-	vtkMAFXYPlotActor.h
+  vtkMAFXYPlotActor.cxx
+  vtkMAFXYPlotActor.h
+  vtkMAFPolyDataNormals.cxx
+  vtkMAFPolyDataNormals.h
 )
 
 IF(WIN32)
