Wizard Classes Tests Added some getter Updated method visibility

--- a/Testing/Common/CMakeLists.txt
+++ b/Testing/Common/CMakeLists.txt
@@ -40,6 +40,43 @@ ADD_TEST(medHTMLTemplateParserBlockTest   ${EXECUTABLE_OUTPUT_PATH}/medHTMLTempl
 ADD_EXECUTABLE(medVect3dTest  medVect3dTest.h medVect3dTest.cpp)
 ADD_TEST(medVect3dTest   ${EXECUTABLE_OUTPUT_PATH}/medVect3dTest )
 
+ADD_EXECUTABLE(medWizardBlockInformationTest  medWizardBlockInformationTest.cpp  medWizardBlockInformationTest.h)
+ADD_TEST(medWizardBlockInformationTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardBlockInformationTest )
+
+ADD_EXECUTABLE(medWizardBlockOperationTest  medWizardBlockOperationTest.cpp  medWizardBlockOperationTest.h)
+ADD_TEST(medWizardBlockOperationTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardBlockOperationTest )
+
+ADD_EXECUTABLE(medWizardBlockSelectionTest  medWizardBlockSelectionTest.cpp  medWizardBlockSelectionTest.h)
+ADD_TEST(medWizardBlockSelectionTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardBlockSelectionTest )
+
+ADD_EXECUTABLE(medWizardBlockYesNoSelectionTest  medWizardBlockYesNoSelectionTest.cpp  medWizardBlockYesNoSelectionTest.h)
+ADD_TEST(medWizardBlockYesNoSelectionTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardBlockYesNoSelectionTest )
+
+ADD_EXECUTABLE(medWizardBlockTest  medWizardBlockTest.cpp  medWizardBlockTest.h)
+ADD_TEST(medWizardBlockTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardBlockTest )
+
+ADD_EXECUTABLE(medWizardBlockTypeCheckTest  medWizardBlockTypeCheckTest.cpp  medWizardBlockTypeCheckTest.h)
+ADD_TEST(medWizardBlockTypeCheckTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardBlockTypeCheckTest )
+
+ADD_EXECUTABLE(medWizardBlockVMESelectionTest  medWizardBlockVMESelectionTest.cpp   medWizardBlockVMESelectionTest.h)
+ADD_TEST(medWizardBlockVMESelectionTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardBlockVMESelectionTest )
+
+ADD_EXECUTABLE(medWizardManagerTest  medWizardManagerTest.cpp  medWizardManagerTest.h)
+ADD_TEST(medWizardManagerTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardManagerTest )
+
+ADD_EXECUTABLE(medWizardSettingsTest  medWizardSettingsTest.cpp  medWizardSettingsTest.h)
+ADD_TEST(medWizardSettingsTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardSettingsTest )
+
+ADD_EXECUTABLE(medWizardWaitOpTest  medWizardWaitOpTest.cpp  medWizardWaitOpTest.h)
+ADD_TEST(medWizardWaitOpTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardWaitOpTest )
+
+ADD_EXECUTABLE(medWizardTest  medWizardTest.cpp  medWizardTest.h)
+ADD_TEST(medWizardTest   ${EXECUTABLE_OUTPUT_PATH}/medWizardTest )
+
+
+
+
+
 
 # wxWidgets specific classes
 #IF (MAF_USE_WX)
