a stent is deployed in this version

--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -140,6 +140,11 @@ SET(PROJECT_SRCS
   
   medPipeRayCast.cpp
   medPipeRayCast.h
+  
+   #add for stent
+  StentModelSource.h
+  StentModelSource.cpp
+  DeformableSimplexMeshFilter001.h 
 )
 
 IF (MAF_USE_ITK)
@@ -150,6 +155,12 @@ SET(PROJECT_SRCS  ${PROJECT_SRCS}
   medPipeGraph.h
   medVMEAnalog.cpp
   medVMEAnalog.h
+  
+ #add for stent
+  medVMEStent.cpp
+  medVMEStent.h
+  kdtree.c
+  kdtree.h   
 )
 ENDIF (MAF_USE_ITK)
 
