Changes to medVMEStent and associated classes. Added catheter calculator to synchronise catheter and stent. Added visual pipe class and modal render window to view deformation. Divided m_CenterLine into m_VesselCenterLine and m_StentCenterLine so that stent position can be changed. Much general tidying and debugging.

--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -156,7 +156,9 @@ SET(PROJECT_SRCS  ${PROJECT_SRCS}
  #add for stent
   medVMEStent.cpp
   medVMEStent.h
-  
+  medVMEStentDeploymentVisualPipe.cpp
+  medVMEStentDeploymentVisualPipe.h
+
   #stent used tool, to find nearest point
   kdtree.c
   kdtree.h
