--- a/Gui/CMakeLists.txt
+++ b/Gui/CMakeLists.txt
@@ -126,9 +126,10 @@ SET(PROJECT_SRCS
   mafGUIViewWin.h
   mafGUICrossIncremental.cpp
   mafGUICrossIncremental.h
-
   mafGUIComboBox.cpp
   mafGUIComboBox.h
+  mafGUISettingsHelp.h
+  mafGUISettingsHelp.cpp
 )
 
 IF (MAF_USE_CURL)
