New vtkMEDStentModelSource with new stent models. Hui version merged with Nigel version. vtkMEDStentModelSource has been tidied, eg m_ on member variables, no public member variables, more whitespace and .h placed in #ifndef... #endif.
Changed .txx file back to _Impl.h.

--- a/vtkMED/CMakeLists.txt
+++ b/vtkMED/CMakeLists.txt
@@ -136,7 +136,7 @@ SET(vtkMED_SRCS
   vtkMEDStentModelSource.cpp
   vtkMEDStentModelSource.h
   vtkMEDDeformableSimplexMeshFilter.h
-  vtkMEDDeformableSimplexMeshFilter.txx
+  vtkMEDDeformableSimplexMeshFilter_Impl.h
 
   ############# VolumeLarge Files - TO BE COMMITTED DOWN ########
   vtkMAFIdType64.h
